--- a/src/Components/EmployeeForm/EmployeeForm.css
+++ b/src/Components/EmployeeForm/EmployeeForm.css
@@ -1,83 +1,83 @@
 /* Modal Background */
 .modal-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #44e8e9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-  }
-  .modal-container {
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    height: 85%;
-    max-width: 600px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-  }
-  
-  .modal-header {
-    text-align: start;
-    color: #0084bb;
-  }
-  
-  .registration-form {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .form-row {
-    display: flex;
-    gap: 1rem;
-    width: 100%;
-    margin-top: 0.8rem;
-  }
-  .input-box{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    gap: 0.3rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #44e8e9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
 }
-.half{
-    display: flex;
-    width: 50%;
-    gap: 1rem;
+.modal-container {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  height: 85%;
+  max-width: 600px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
 }
-.input-box.half-width{
-    width:50%;
+
+.modal-header {
+  text-align: start;
+  color: #0084bb;
 }
-  .form-button {
-    display: flex;
-    justify-content: flex-start; 
-    gap:1rem;
-  }
-  
-  .form-error {
-    color: red;
-    font-size: 0.85rem;
-    display:inline-block;
-  }
-  
 
-  .add-button,
-  .cancel-button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 1rem;
-  }
-  
+.registration-form {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
 
-  
+.form-row {
+  display: flex;
+  gap: 1rem;
+  width: 100%;
+  margin-top: 0.8rem;
+}
+.input-box {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  gap: 0.3rem;
+}
+.half {
+  display: flex;
+  width: 50%;
+  gap: 1rem;
+}
+.input-box.half-width {
+  width: 50%;
+}
+.form-button {
+  display: flex;
+  justify-content: flex-start;
+  gap: 1rem;
+}
+
+.form-error {
+  color: red;
+  height:0.8rem ;
+  font-size: 0.85rem;
+  visibility: hidden;
+}
+.form-error.visible{
+visibility: visible;
+}
+
+.add-button,
+.cancel-button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+}
