--- a/src/Components/EmployeeList/EmployeeList.css
+++ b/src/Components/EmployeeList/EmployeeList.css
@@ -1,46 +1,43 @@
 .table-Container {
-    width: 100%;
-  }
-  
-  .employee-table {
-    width: 90%;
-    border-collapse: collapse;
-    font-family: Arial, sans-serif;
+  width: 100%;
+}
 
-    text-align: left;
-    margin: 0 auto;
-  }
-  
-  .employee-table th, 
-  .employee-table td {
-    padding: 1rem;
-  }
-  
-  .employee-table th {
-    background-color: #f4f4f4;
-    font-weight: bold;
-    font-size: 0.8rem;
-    color: #333;
-  }
-  .employee-table td {
-    font-size: 0.8rem;
-    font-weight: bold;
+.employee-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
+  text-align: left;
 }
- .action-buttons{
-    display: flex;
-    gap: 1rem;
+
+.employee-table thead {
+  background-color: #0084bb;
 }
-  .table-Container button:first-child {
-    background-color: #4CAF50;
-    width: 40%;
-    height: 2rem;
-    padding: 10px;
-  }
-  
-  .table-Container button:last-child {
-    background-color: #f44336; 
-    width: 40%;
-    height: 2rem;
-    padding: 10px;
-  }
-  
+
+.employee-table th,
+.employee-table td {
+  padding: 0.5rem;
+}
+.employee-table tbody {
+  border-left: 1px solid;
+  border-right: 1px solid;
+  border-bottom: 1px solid;
+  box-shadow: 5px 5px 6px rgba(17, 17, 17, 0.1);
+}
+.employee-table th {
+  color: white;
+  font-size: 0.8rem;
+  font-weight: 200;
+}
+.employee-table td {
+  font-size: 0.8rem;
+  text-align: start;
+}
+.action-buttons {
+  display: flex;
+  gap: 1rem;
+}
+.action-buttons p {
+  color: #0084bb;
+  font-size: 0.8rem;
+  cursor: pointer;
+}
